--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -4,6 +4,12 @@
             <svg class="icon icon-facebook"><use xlink:href="#icon-facebook"></use></svg>
         </a>
     {% endif %}
+    
+    {% if site.scholar %}
+        <a class="link" data-title="scholar.google.com/citations?user={{ site.scholar }}" href="https://scholar.google.com/citations?user={{ site.scholar }}" target="_blank">
+            <svg class="icon icon-google-scholar"><use xlink:href="#icon-google-scholar"></use></svg>
+        </a>
+    {% endif %}
 
     {% if site.twitter %}
         <a class="link" data-title="twitter.com/{{ site.twitter }}" href="http://twitter.com/{{ site.twitter }}" target="_blank">
