Added google scholar to social-links.html

--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -7,7 +7,7 @@
     
     {% if site.scholar %}
         <a class="link" data-title="scholar.google.com/citations?user={{ site.scholar }}" href="https://scholar.google.com/citations?user={{ site.scholar }}" target="_blank">
-            <svg class="icon icon-google-scholar"><use xlink:href="#icon-google-scholar"></use></svg>
+            <i class="ai ai-google-scholar-square ai-3x"></i>
         </a>
     {% endif %}
 
