--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,7 @@
 {% if page.title == "Home"%}{% assign showHeader = true %}{% endif %}
 
 {% if page.title == "About"
+   or page.title == "Blog"
    or page.title == "Projects"
    or page.title == "Resume"
 %}{% assign showMinHeader = true %}{% endif %}
