--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,5 @@
-<nav class="{% if page.title == "Home" or page.title == "About" %}nav-home{% else %}nav{% endif %}">
+<!-- <nav class="{% if page.title == "Home" %}nav-home{% else %}nav{% endif %}"> -->
+<nav class="nav-home">
     <ul class="list">
         {% if page.title != "Home" %}
             <li class="item">
